# internship

.github/workflows/: integration.yml
integration/: coverage.sh
integration/dut/: CMakeLists.txt  prj.conf
integration/dut/src/: main.cpp
integration/tester/: CMakeLists.txt  map.yml  prj.conf  testcase.yml
integration/tester/src/: prj.conf  sample.cpp  test.cpp
unit tests/lib/communication/: tst_BLEComm.cpp  tst_CommunicationService.cpp  tst_NFCComm.cpp  tst_PowerOffHandler.cpp
unit tests/lib/mocks/BLEComm/: MockBLEComm.h
